workflows/asana-card/app/styles/_tasks.scss
/* ... */
.new-task-loader {
  width: 70px;
  height: 70px;
  position: absolute;
  right: 0;
  top: 0;

  @extend %flex;

  &.inactive {
    display: none;
  }

  &.active {
    display: flex;
  }
}

.inv-icon {
  opacity: 0 !important;
}

.avatar-name {
	width: 35px;
	height: 35px;
	border: 2px solid $blue-100;
	border-radius: 50%;
	color: $blue-100;

	@extend %flex;
}

.task-assignees {
  width: 100%;
  padding: 0 21px;
  position: relative;
  z-index: 2;
  display: flex;
  align-items: center;
  //justify-content: center;
  flex-wrap: wrap;
  border-bottom: 1px solid #eee;

  &.new-assign {
    position: fixed;
    min-height: 80px;
    left: 0;
    bottom: 120px;
    background-color: white;
    width: 100%;
    border-bottom: 1px solid $studioGray-20;
    transform: scale3d(1,0,1);
    transform-origin: 50% 100%;
    transition: .2s;

    > * {
      opacity: 0;
    }

    &.active {
      transform-origin: 50% 100%;
      transform: scale3d(1,1,1);
      transition: .2s;

      > * {
        opacity: 1;
      }
    }
  }

  .action-bar-assign {
    width: 35px;
    height: 35px;
    padding: 15px 0;
    margin: 0 5px;
    border: 1px solid $deepBlue-60;
    border-radius: 50%;
    cursor: pointer;

    @extend %flex;

    .material-icons {
      margin-left: -2px;
      color: $deepBlue-60 !important;
      font-size: 16px !important;
      cursor: pointer !important;
    }

    &:hover {
      background-color: $deepBlue-60;

      .material-icons {
        color: white !important;
      }
    }
  }

  img {
    box-sizing: content-box;
    padding: 15px 0;
    width: 35px;
    height: 35px;
    border-radius: 50%;
    margin: 0 5px;
  }
}

.card-overlay {
  width: 100%;
  height: calc(100% - 50px);
  left: 0;
  top: 50px;
  position: fixed;
  background-color: rgba($deepBlue-100, .5);
  z-index: 999;
  display: none;

  &.active {
    display: block;
  }
}

.todo-input {
  width: 100%;
  height: 70px;
  background-color: $studioGray-20;
  position: fixed;
  //z-index: 10;
  bottom: 0;
  left: 0;
  z-index: 9;
  //overflow: hidden;

  &.active {
    z-index: 1000;
  }

  .task-add-icon {
    width: 70px;
    height: 70px;
    position: absolute;
    right: 0;
    bottom: 0;
    transform: scale(0) rotate(0deg);
    @extend %flex;
    transition: .2s ease-in-out;

    &.active {
      transform: scale(1) rotate(360deg);
      transition: .2s ease-in-out;

      .material-icons {
        color: $deepBlue-60 !important;
      }

      &:hover {
        background-color: $deepBlue-20;
      }
    }
  }

  .date-picker-wrapper {
    position: fixed;
    left: 0;
    bottom: 120px;
    background-color: white;
    width: 100%;
    border-bottom: 1px solid $studioGray-20;
    transform: scale3d(1,0,1);
    transform-origin: 50% 100%;
    transition: .2s;

    > * {
      opacity: 0;
    }

    &.active {
      transform-origin: 50% 100%;
      transform: scale3d(1,1,1);
      transition: .2s;

      > * {
        opacity: 1;
      }
    }
  }

  .input-actions {
    width: 100%;
    height: 50px;
    background-color: white;
    margin-top: -50px;
    box-shadow: 0px -3px 5px 0px rgba(0,0,0,0.1);
    display: flex;
    transform: scale3d(1,0,1);
    transition: .2s;
    //display: none;

    &.active {
      //background-color: red;
      transform: scale3d(1,1,1);
      transition: .2s;

      > * {
        opacity: 1;
        transition: opacity 0s .2s;
      }
    }

    > * {
      transition: opacity 0s .2s;
      transition: background-color 0s 0s;
      opacity: 0;

      > * {
        color: $deepBlue-60 !important;
      }

      &:hover {
        transition: background-color 0s 0s;
        background-color: $studioGray-40;
      }
    }

    .schedule {
      width: 50%;
      height: 100%;

      @extend %flex;
    }

    .assign {
      width: 50%;
      height: 100%;

      @extend %flex;
    }
  }

  input {
    width: 100%;
    height: 100%;
    background-color: $studioGray-20;
    font-size: 14px;
    padding: 0 15px;
    color: $deepBlue-60;
    letter-spacing: 1px;
    transition: .1s ease-in-out;

    &::-webkit-input-placeholder {
       color: $deepBlue-60;
       font-family: 'Roboto';
       font-weight: 400;
    }

    &:focus {
      color: white;
      background-color: $deepBlue-100;
      transition: .1s ease-in-out;

      & + .task-add-icon {

        &:hover {
          background-color: $deepBlue-80;
        }

        .material-icons {
          color: white !important;
        }
      }
    }
  }
}

.task-assign-avatar {
  width: 35px;
  height: 100%;

  @extend %flex;

  img {
    border-radius: 50%;
    width: 35px;
    height: 35px;
  }
}

.task-assign {
  width: 35px;
  height: 35px;
  border: 1px solid $deepBlue-60;
  border-radius: 50%;
  cursor: pointer;

  @extend %flex;

  .material-icons {
    margin-left: -2px;
    color: $deepBlue-60 !important;
    font-size: 16px !important;
    cursor: pointer !important;
  }

  &:hover {
    background-color: $deepBlue-60;

    .material-icons {
      color: white !important;
    }
  }
}
/* DayPicker styles */

//colors
$color_mantle_approx: #8b9898;
$color_cararra_approx: #eaecec;
$color_monza_approx: #d0021b;
$color_alto_approx: #dce0e0;
$color_seashell_approx: #eff1f1;
$color_desert_storm_approx: #f7f8f8;
$white: #fff;
$color_havelock_blue_approx: #4a90e2;

.DayPicker {
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	position: relative;
	padding: 1rem 0;
	//Instead of the line below you could use @include user-select($select)
	user-select: none;
	&:focus {
    outline: none;
  }
  opacity: 0;
}
.DayPicker-Month {
	display: table;
	border-collapse: collapse;
	border-spacing: 0;
	//Instead of the line below you could use @include user-select($select)
	user-select: none;
	margin: 0 1rem;
}
.DayPicker-NavBar {
	position: absolute;
	left: 0;
	right: 0;
	padding: 0 .5rem;
}
/* ... */

